--- a/css/tictactoe.css
+++ b/css/tictactoe.css
@@ -1,49 +1,47 @@
-td{
-    border: 2px solid #333;
-    height: 100px;
-    width: 100px;
+body{
+    margin: 0px;
+    margin-top: 10px;
+    background-color: blue;
     text-align: center;
-    vertical-align: middle;
-    font-size: 70px;
-    cursor: pointer;
 }
 
-table{
-    border-collapse: collapse;
-    position: absolute;
-    left: 50px;
-    margin-left: -155px;
-    top: 50px;
+.col{
+    display: inline-block;
+    width:90px;
+    height: 90px;
+    text-align:center;
+    background-color: white;
+    font-size: 40px;
+    padding: 20px;
 }
 
-table tr:first-child td{
-    border-top: 0;
-}
-
-table tr:last-child td{
-    border-bottom: 0;
-}
-
-table tr td:first-child{
-    border-left: 0;
-}
-
-table tr td:last-child{
-    border-right: 0;
-}
-
-.endgame {
-    display: none;
-    width: 200px;
-    top: 120px;
-    background-color: rgba(205, 133, 63, 0.8);
-    position: absolute;
-    left: 50px;
-    margin-left: -100px;
-    padding-top: 50px;
-    padding-bottom: 50px;
-    text-align: center;
-    border-radius: 5px;
+/*=====HEAD SECTION=====*/
+.github{
+    font-size: 25px;
+    text-decoration: none;
     color: white;
-    font-size: 2em;
+    margin-top: 10px;
+    text-decoration: none;
+}
+
+.github:hover{
+    font-size: 25px;
+    text-decoration: none;
+    color:white;
+    margin-top: 10px;
+    text-decoration: none;
+}
+.title{
+    color: white;
+}
+.author{
+    color: white;
+    margin-top: -12px;
+    margin-left: 90px;
+    font-size: 12px;
+    margin-bottom: 50px;
+}
+
+.btn{
+    margin-top: 20px;
 }
