--- a/css/tictactoe.css
+++ b/css/tictactoe.css
@@ -18,16 +18,16 @@
 
 /*=====TIC-TAC-TOE SECTION=====*/
 .gameboard{
-    width: 300px;
-    height: 300px;
+    width: 315px;
+    height: 315px;
     margin: auto;
 }
 
 .square{
     float: left;
     background: rgba(255,255,255,.9);
-    width: 100px;
-    height: 100px;
+    width: 105px;
+    height: 105px;
     border: 1px solid black;
     cursor: pointer;
     text-align: center;
@@ -50,4 +50,15 @@ body{
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
+}
+
+.marginTop{
+    margin-top: 25px;
+}
+
+.author{
+    font-size: 12px;
+    margin-top: -15px;
+    margin-left: 85px;
+    margin-bottom:30px;
 }
