--- a/css/tictactoe.css
+++ b/css/tictactoe.css
@@ -31,9 +31,28 @@
     margin: auto;
 }
 
+#winner{
+    width: 300px;
+    height: 100px;
+    background-color: black;
+    text-align: center;
+    margin-top: -250px;
+    margin-left: 80px;
+    position: absolute;
+}
+
+#winnerMessage{
+
+    font-family: 'Hanalei Fill', cursive;
+    padding-top: 18px;
+    font-size: 50px;
+    color: white;
+
+}
+
 .square{
     float: left;
-    background: rgba(255,255,255,.5);
+    background: rgba(255,255,255,.4);
     width: 105px;
     height: 105px;
     border: 1px solid black;
@@ -73,7 +92,4 @@ body{
     font-weight: bold;
 }
 
-#winner{
-    display: block;
-    width:
-}
+
