--- a/css/tictactoe.css
+++ b/css/tictactoe.css
@@ -44,6 +44,7 @@
     margin-top: 10px;
     font-size: 40px;
     text-align: center;
+    padding-bottom: 20px;
 }
 
 .square{
@@ -105,5 +106,6 @@ table, td, th {
 }
 
 table th{
-    background-color: lightblue;
+    background-color: black;
+    color: white;
 }
